minor fixes to bib file and intro

--- a/Manuscripts/cog-psych/revision/citations.bib
+++ b/Manuscripts/cog-psych/revision/citations.bib
@@ -243,13 +243,13 @@
 	year = {1974}
 }
 
-@article{reimer18,
+@article{reimers18,
 	author = {S. Reimers and C. Donkin and M. E. {Le Pelley}},
 	title = {Perceptions of randomness in binary sequences: Normative, heuristic, or both?},
 	journal = {Cognition},
 	volume = {172},
 	pages = {11--25},
-	year = {2015}
+	year = {2018}
 }
 
 @article{tversky83,
