--- a/Manuscripts/cog-psych/revision/cogpsych.tex
+++ b/Manuscripts/cog-psych/revision/cogpsych.tex
@@ -97,13 +97,13 @@ Creating and learning new ideas is one of the most fascinating and important hum
 
 Generating and learning new concepts are, however, not altogether different from the types of behaviors typically studied in cognitive psychology laboratories. In particular, generating a member of a novel class can be considered a `special case' application of existing category knowledge \citep{kemp2014taxonomy,kurtz2015human}. Research in categorization typically focuses on what properties of a category affect the classification of an object's category given its features \citep{shepard1961learning,kurtz2013human}, and the prediction of an object's unobserved features given some of its other features and/or its category \citep{markman2003category}. The generation of members of a new category consists of inferring {\em all} features for a {\em novel} category label. Thus, we can make progress formalizing the processes involved in category generation by extending theories of categorization to this case. Then, to ensure that these principles reflect basic principles of categorization and are not just specific to category generation, we can examine what factors of the generated categories affect the ease at which people learn the category.
 
-Previous work in category learning and generation has established that people are highly sensitive to the structural properties of categories, such as correlations between the features of category members and the relation between items within the same category and those in different categories \citep{roschmervis1975,regier2007,shepard1961learning,smith1995}. Inspired by this work, previous research on the topic of category generation has explored a similar principle: People tend to create new categories that have similar {\em statistical regularities} as previously learned categories \citep{jern2013probabilistic,ward1994structured}. Although this is an important characteristic of generating new categories, it cannot be the only one. Taken to the extreme, the best ``new'' category in terms of having the same statistical regularities to other categories would be identical to a known category that is representative of the domain (and thus, not new at all). 
+Previous work in category learning and generation has established that people are highly sensitive to the structural properties of categories, such as correlations between the features of category members and the relation between items within the same category and those in different categories \citep{roschmervis1975,regier2007,shepard1961learning,smith1995creative}. Inspired by this work, previous research on the topic of category generation has explored a similar principle: People tend to create new categories that have similar {\em statistical regularities} as previously learned categories \citep{jern2013probabilistic,ward1994structured}. Although this is an important characteristic of generating new categories, it cannot be the only one. Taken to the extreme, the best ``new'' category in terms of having the same statistical regularities to other categories would be identical to a known category that is representative of the domain (and thus, not new at all). 
 
 To successfully generate something novel, what is generated must be different from what is already known. This fundamental constraint, ``being different'', or contrasting from other categories in the relevant domain, is the focus of our work. Although implicitly assumed in some work, this constraint has been overlooked in previous research: To our knowledge, there has not been any systematic investigation addressing how generated categories {\em differ} from what is already known. Although the idea of category contrast is ubiquitous throughout the categorization literature, and extends to a variety of other fields \citep[e.g., color;][]{regier2007}, the idea that a new category should be ``different'' is vague, as there are many ways it could be different from a previously observed category.
 
 We examine two different definitions of how categories should differ from one another: exemplar contrast or representative of the alternative category. To formalize the first technique, we build on the largely successful exemplar modeling framework that \citep{medin1978context,nosofsky1984choice,nosofsky1986attention}. In doing so, we propose a novel exemplar model of category generation, {\em Producing Alike and Contrasting Knowledge using Exemplar Representations} (PACKER), formalizing how new categories should differ from previous categories. It embodies the exemplar contrast principle by incorporating a factor that repulses members of opposite categories from one another. To foreshadow, we find that this notion of contrast predicts human category learning performance, above and beyond other category learning models in a novel behavioral experiment. This demonstrates that contrast plays a central role in other important categorization tasks, which is not specific to category generation.
 
-The second hypothesis for how contrast affects categorization is contrast as {\em representativeness} \citep{kahneman73}. The representativeness heuristic states that people make judgments regarding the probability of an outcome based on how representative it is of the observed evidence. The heuristic is a powerful theoretical construct that has been used to capture a range of complex patterns of human judgments \citep{kahneman73,tversky74,tversky83}, especially those that deviate from normative theory (as given by Bayesian inference). For example, the coinflip sequence TTHTH is perceived to be more random than TTTTT (despite both having the same probability of having been generated from a fair coin). Although there is a healthy debate as to whether perceived randomness {\em really} deviates from normative theory \citep{griffiths18,hahn09}, the representativeness heuristic remains one of the main explanations of human judgments \citep{reimers18}. To formalize the hypothesis that people expect a new category to be representative of the opposite of the current category, or contrast as {\em representativeness}, we use the Bayesian formulation of representativeness \citep{tenenbaum01}, which has been used successfully to capture human performance in color categorization \citep{abbott16}, image category learning \citep{abbott11}, and language grammar learning \citep{rafferty10}. We do so by extending the state-of-the-art category generation model \citep{jern2013probabilistic} and find that  human category generation is best capture as generating representative, rather than probable, samples.
+The second hypothesis for how contrast might affect categorization is contrast as {\em representativeness}. The representativeness heuristic \citep{kahneman73} states that people make judgments regarding an outcome based on how representative it is of the evidence given in the current context. The heuristic is a powerful theoretical construct that has been used to capture a range of complex patterns of human judgments \citep{kahneman73,tversky74,tversky83}, especially those that deviate from normative theory (as given by a straightforward application of Bayes' rule). For example, the coinflip sequence TTHTH is perceived to be more random (due to it being representative of a coinflip sequence) than TTTTT (despite both having the same probability of having been generated from a fair coin). Although there is a healthy debate as to whether perceived randomness {\em really} deviates from normative theory \citep{griffiths18,hahn09}, the representativeness heuristic remains one of the main explanations of human judgments \citep{reimers18}. To formalize the hypothesis that people expect a new category to be representative of the opposite of the current category, or contrast as {\em representativeness}, we use the Bayesian formulation of representativeness \citep{tenenbaum01}, which has been used successfully to capture human performance in color categorization \citep{abbott16}, image category learning \citep{abbott11}, and language grammar learning \citep{rafferty10}. We do so by extending the state-of-the-art category generation model \citep{jern2013probabilistic} and find that  human category generation is best capture as generating representative, rather than probable, samples.
 
 The outline of the article is as follows. First we describe previous empirical work on the topic of category generation, as well as the computational formalizations of the theories in those reports. We then present two hypotheses for how contrast might affect categorization and formalize them in computational models. The first is a novel computational model, which is designed to generate categories that systematically differ from existing categories in the domain. The second assumes the goal of category generation is to create representative samples of the opposite of the observed categories. We present two experiments demonstrating strong and systematic effects of category contrast on creative generation, and we qualitatively and quantitatively analyze the performance of each model in capturing human category generation. We conclude with a discussion of the implications of our results for categorization and creative cognition, and directions for future work.
 
