--- a/Manuscripts/cog-psych/revision/cogpsych.tex
+++ b/Manuscripts/cog-psych/revision/cogpsych.tex
@@ -105,7 +105,7 @@ We examine two different definitions of how categories should differ from one an
 
 The second hypothesis for how contrast might affect categorization is contrast as {\em representativeness}. The representativeness heuristic \citep{kahneman73} states that people make judgments regarding an outcome based on how representative it is of the evidence given in the current context. The heuristic is a powerful theoretical construct that has been used to capture a range of complex patterns of human judgments \citep{kahneman73,tversky74,tversky83}, especially those that deviate from normative theory (as given by a straightforward application of Bayes' rule). For example, the coinflip sequence TTHTH is perceived to be more random (due to it being representative of a coinflip sequence) than TTTTT (despite both having the same probability of having been generated from a fair coin). Although there is a healthy debate as to whether perceived randomness {\em really} deviates from normative theory \citep{griffiths18,hahn09}, the representativeness heuristic remains one of the main explanations of human judgments \citep{reimers18}. To formalize the hypothesis that people expect a new category to be representative of the opposite of the current category, or contrast as {\em representativeness}, we use the Bayesian formulation of representativeness \citep{tenenbaum01}, which has been used successfully to capture human performance in color categorization \citep{abbott16}, image category learning \citep{abbott11}, and language grammar learning \citep{rafferty10}. We do so by extending the state-of-the-art category generation model \citep{jern2013probabilistic} and find that  human category generation is best capture as generating representative, rather than probable, samples.
 
-The outline of the article is as follows. First we describe previous empirical work on the topic of category generation, as well as the computational formalizations of the theories in those reports. We then present two hypotheses for how contrast might affect categorization and formalize them in computational models. The first is a novel computational model, which is designed to generate categories that systematically differ from existing categories in the domain. The second assumes the goal of category generation is to create representative samples of the opposite of the observed categories. We present two experiments demonstrating strong and systematic effects of category contrast on creative generation, and we qualitatively and quantitatively analyze the performance of each model in capturing human category generation. We conclude with a discussion of the implications of our results for categorization and creative cognition, and directions for future work.
+The outline of the article is as follows. First we describe previous empirical work on the topic of category generation, as well as the computational formalizations of the theories in those reports. We then present two hypotheses for how contrast might affect categorization and formalize them in computational models. The first is a novel computational model, which is designed to generate categories that systematically differ from existing categories in the domain. The second assumes the goal of category generation is to create representative samples of the opposite of the observed categories. We present two experiments demonstrating strong and systematic effects of category contrast on concept generation, and we qualitatively and quantitatively analyze the performance of each model in capturing human category generation. Afterwards, we find support for category contrast predicting the ease at which people learn a pair of novel categories in an empirical experiment. We conclude with a discussion of the implications of our results for categorization and creative cognition, and directions for future work.
 
 \section{Prior work}
 
@@ -155,7 +155,7 @@ These data, shown in Figure \ref{fig:jk13-huecontrast}, reveal a clear pattern: 
 Re-analyzing the results from \cite{jern2013probabilistic} provides preliminary support that contrast plays a role in category generation. Taken alongside the analyses reported by \cite{jern2013probabilistic}, our analysis suggests that generated categories tend to be distinct from {\em and} distributionally similar to what is already known. However, it is worth noting that our analysis is still limited: The color groups defined above are imprecise, and it is not clear that our color grouping is consistent with the psychological color boundaries perceived by participants. While we did obtain similar results using a variety of alternative groupings, the hue dimension used in the \cite{jern2013probabilistic} study does not lend itself straightforwardly to the the computation of similarities, and thus we cannot be certain of whether our coding accurately approximates the psychological space of the stimuli. This precludes traditional applications of categorization models to their data as it is usually necessary to encode objects in psychological space in order to accurately determine the similarity between objects. By consequence, although these results likely indicate that contrast exerts {\em some} influence, they do not precisely describe the nature of that influence. In the sections below, we propose a quantitative framework specifying the role of category contrast in creative generation.
 
 
-\subsection{The PACKER Model}
+\subsection{Contrast as exemplar dissimilarity: The PACKER Model}
 
 \label{section:PACKER-definition}
 
@@ -219,7 +219,7 @@ TODO: fill in Bayesian definition of representativeness and its application in J
 
 Research on the creative generation of novel concepts has focused on the finding that generated categories tend to possess distributional commonalities with known categories. However, a fundamental goal of concept generation is to create something {\em new} (i.e., different from what is already known). The manner in which generated categories differ from known ones is, nonetheless, poorly understood: Existing theories do not make strong predictions about how creatively generated concepts should systematically differ from existing ones. Above, we found encouraging initial support that contrast influences category generation \citep[][Experiment 3]{jern2013probabilistic}, and we introduced a novel, exemplar-based model formalizing the roles of similarity and contrast in creative generation.
 
-In the sections below, we present two experiments demonstrating systematic effects of category contrast on creative generation inspired by factors influencing how PACKER generates new categories. Our experiments are based on \cite{jern2013probabilistic}'s paradigm, which is a straightforward translation of the traditional artificial classification paradigm to the task of category generation: Participants are first exposed to a single, experimenter-defined category, and are then asked to generate members of a new category. We then report formal analyses comparing PACKER's account of our results to that of the hierarchical Bayesian and copy-and-tweak models developed by \cite{jern2013probabilistic}.
+In the sections below, we present two experiments demonstrating systematic effects of category contrast on category generation inspired by factors influencing how the contrast models generate new categories. Our experiments are based on \cite{jern2013probabilistic}'s paradigm, which is a straightforward translation of the traditional artificial classification paradigm to the task of category generation: Participants are first exposed to a single, experimenter-defined category, and are then asked to generate members of a new category. We then report formal analyses comparing the exemplar dissimilarity and the representativeness accounts of our results to that of the hierarchical Bayesian and copy-and-tweak models developed by \cite{jern2013probabilistic}. After analyzing the category generation studies, we present third experiment to demonstrate the effect of contrast in category learning. This ensures that our results are not idiosyncratic to category generation.
 
 \section{Experiment 1}
 
@@ -308,8 +308,6 @@ We believe that the failure to replicate this finding is because participants in
 
 
 \subsection{Discussion}
-
-
 In Experiment 1 we sought to extend our analysis of the \cite{jern2013probabilistic} data by evaluating the influence of category contrast on creative generation, given qualitatively different types of prior knowledge. We found strong evidence for effects of category contrast in each condition: Participants were more likely to generate stimuli that are more distant from (i.e., less similar to) members of a previously-learned category, and members of participant-generated categories tended to be more similar to one another than to members of previously-learned categories. We also partially replicated the classic finding that the distributional structure of generated categories reflects that of previously learned categories \citep{jern2013probabilistic,ward1994structured}: Members of generated categories were more widely distributed along dimensions which were widely distributed in the experimenter-defined category. 
 
 Notably, however, we also found that participants who learned an XOR category (composed of exemplars following a positive diagonal, see Figure \ref{fig:e1-conditions}) tended to generate items according to a {\em negative} feature correlation -- the opposite of what was present in the previously learned category. While this may be difficult to account for under existing theoretical approaches (which assume generated categories follow the same distributional structure as known categories), it can be concisely explained from a category contrast perspective. Specifically, within the XOR condition, individuals who seek to generate a category that is perceptually distinct from what is already known are left with only the upper-left and bottom-right quadrants of the space, as members of the previously-learned XOR category lie in the bottom-left and top-right. If examples are generated into both of the available quadrants, the generated category will possess a strongly negative correlation, opposing that of the experimenter-defined class.
@@ -568,24 +566,27 @@ Categorization research addresses the representations and processes that underli
 
 We can think of the category generation task in our studies as asking a person to formulate an idea about what set of items in the domain are most interestingly {\em not} members of the original category. To meet this condition, the items must take some form of coherence that aligns with that of the original category and some form of distinctiveness relative to the original category. Reflecting the basic level of organization in natural categories, it makes sense to generate a set of items that possess strong within-category coherence (by importing or systematically transforming the internal structure of the original category) as well as strong between-category differentiation (by creating maximum contrast with the original category). In this sense one can see the patterns of performance in the category generation task as recapitulating the order of semantic organization.
 
-\subsection{Representativeness in Categorization}
+\subsection{Contrast and Representativeness in Categorization}
+Xian: Please write about the two hypotheses and that followup work needs to look into why the Bayesian representativeness model doesn't do as well at explaining category learning ease, but does better at category generation. 
+
 MAKE SURE WE CITE AND DESCRIBE \citet{thomas98}!
 
 \subsection{Limitations and Future Directions}
+Although we have demonstrated that contrast plays a role in categorization, our results were equivocal as to whether contrast is governed by exemplar dissimilarity or representativeness. 
 
-Although successful in explaining our results, PACKER does not provide a full account of what is known about category generation. Most notably, in this paper we have not evaluated the model's ability to explain the classic finding that generated categories tend to share distributional commonalities with previously learned categories \citep[see][]{jern2013probabilistic,ward1994structured}. While we successfully replicated this effect in Experiment 1, we also found that its influence was limited in comparison to the fundamental constraints imposed by category contrast. Even within Experiment 1, we found systematic inconsistencies: by generating exemplars into unoccupied regions of the space, participants who learned an `XOR' category, composed of members that are widely distributed along both features and are positively correlated in space, tended to generate categories with an opposite (negative) correlation. More generally, PACKER's success over the hierarchical Bayesian model indicates that the emulation of distributional structure exerts only a limited influence in comparison to category contrast in some situations.
+Although successful in explaining our results in all three studies (albeit not as well as the representativeness model for Experiments 1 and 2), PACKER does not provide a full account of what is known about category generation. Most notably, in this paper we have not evaluated the model's ability to explain the classic finding that generated categories tend to share distributional commonalities with previously learned categories \citep[see][]{jern2013probabilistic,ward1994structured}. While we successfully replicated this effect in Experiment 1, we also found that its influence was limited in comparison to the fundamental constraints imposed by category contrast. Even within Experiment 1, we found systematic inconsistencies: by generating exemplars into unoccupied regions of the space, participants who learned an `XOR' category, composed of members that are widely distributed along both features and are positively correlated in space, tended to generate categories with an opposite (negative) correlation. More generally, PACKER inherits the strengths and weaknesses of exemplar models of categorization: It provides a simple and flexible model that explains many results, but deviates systematically from human performance in some cases.
 
 Nonetheless, these classic effects are a core element of the phenomenology of creative generation, and PACKER does not include any mechanisms that explain them. Instead, through the development and evaluation of the PACKER model, we have sought to add new elements into such a phenomenology: The broad and strong influence of category contrast, and the interdependence between category location and distributional structure. It may be possible to combine the hierarchical Bayesian approach proposed by \cite{jern2013probabilistic} with PACKER's underlying claims to obtain a ``best of both worlds'' model, capable of explaining the role of contrast in creative generation, as well as the emulation of distributional structure. However, as noted in the introduction, the incorporation of category contrast is antithetical to the core principles of a traditional, semi-conjugate Bayesian approach. This suggests that category generation is a fundamentally different computational-level problem \citep[different from those posed by][]{jern2013probabilistic,kemp2014taxonomy}. 
 
-Characterizing that problem and conducting a rational analysis is an important direction for future research. To that aim, we plan to explore the connection between exemplar modeling as an Importance Sampling approximation \citep{shi10exemplar}, and see what sort of computational-level problem PACKER approximates. Once formalized in probabilistic terms, it should also be straightforward to incorporate distributional factors into the model. Alternatively, it may be possible to integrate the core principles of PACKER into other categorization models \citep[e.g.,][]{love2004sustain,kurtz2007divergent,smith2000thirty}.
+Characterizing that problem and conducting a rational analysis is an important direction for future research. To that aim, we plan to explore the connection between exemplar modeling as an Importance Sampling approximation \citep{shi10exemplar}, and see what sort of computational-level problem PACKER approximates. Once formalized in probabilistic terms, it should also be straightforward to incorporate distributional factors into the model. This would unite PACKER with the Bayesian representativeness model, and they would differ in terms of their assumptions about how people represent category distributions (as exemplars or prototypes, respectively). Alternatively, it may be possible to integrate the core principles of contrast into other categorization models \citep[e.g.,][]{love2004sustain,kurtz2007divergent,smith2000thirty}.
 
-Finally, although an overall goal of this work is to advance the study of creative thought by explaining generation through empirical and quantitative approaches from research in categorization, these approaches are not easily aligned with many of the alternative theoretical viewpoints in the broader study of creativity \citep[for a review see][]{kozbelt2010theories}, such as those based on free association \citep{mednick1962associative} and conceptual combination \citep{estes2002emergence,murphy1988comprehending}. Instead, we reduced our focus by studying a highly complex behavior (creative generation) as it applies within a well-established domain (artificial category learning). We hope that future work incorporates and highlights the importance of contrast into theories of creativity.
+%Finally, although an overall goal of this work is to advance the study of creative thought by explaining generation through empirical and quantitative approaches from research in categorization, these approaches are not easily aligned with many of the alternative theoretical viewpoints in the broader study of creativity \citep[for a review see][]{kozbelt2010theories}, such as those based on free association \citep{mednick1962associative} and conceptual combination \citep{estes2002emergence,murphy1988comprehending}. Instead, we reduced our focus by studying a highly complex behavior (creative generation) as it applies within a well-established domain (artificial category learning). We hope that future work incorporates and highlights the importance of contrast into theories of creativity.
 
 
 
 \section{Conclusions}
 
-The generation of new concepts and ideas is a highly interesting topic, but it is difficult to study in a controlled experimental environment. In this paper, we have provided such an examination of category generation as it applies within an artificial categorization categorization experiment. Extending the literature on creative cognition, our experiments provide a detailed picture of the role of category contrast in generation: People seek to create concepts that are distinct from what they already know, and the nature of what is created can be influenced by what does not yet exist. Our simulations with traditional exemplar models, as well as a hierarchical Bayesian model, provide strong support for the claim that category contrast is of fundamental importance. More generally, our results demonstrate that popular explanatory approaches from basic research in cognitive science can offer a precise, quantitative account of a behavior as complex as that of creative generation.
+The generation of new concepts and ideas is a highly interesting topic, but it is difficult to study in a controlled experimental environment. In this paper, we have provided such an examination of category generation as it applies within an artificial categorization experiment. Extending the literature on creative cognition, our experiments provide a detailed picture of the role of category contrast in generation: People seek to create concepts that are distinct from what they already know, and the nature of what is created can be influenced by what does not yet exist. Our simulations with traditional exemplar models, as well as a hierarchical Bayesian model, provide strong support for the claim that category contrast is of fundamental importance. More generally, our results demonstrate that popular explanatory approaches from basic research in cognitive science can offer a precise, quantitative account of a behavior as complex as that of creative generation.
 
 
 \clearpage
