--- a/Manuscripts/cog-psych/revision/cogpsych.tex
+++ b/Manuscripts/cog-psych/revision/cogpsych.tex
@@ -576,7 +576,7 @@ Although we have demonstrated that contrast plays a role in categorization, our 
 
 Although successful in explaining our results in all three studies (albeit not as well as the representativeness model for Experiments 1 and 2), PACKER does not provide a full account of what is known about category generation. Most notably, in this paper we have not evaluated the model's ability to explain the classic finding that generated categories tend to share distributional commonalities with previously learned categories \citep[see][]{jern2013probabilistic,ward1994structured}. While we successfully replicated this effect in Experiment 1, we also found that its influence was limited in comparison to the fundamental constraints imposed by category contrast. Even within Experiment 1, we found systematic inconsistencies: by generating exemplars into unoccupied regions of the space, participants who learned an `XOR' category, composed of members that are widely distributed along both features and are positively correlated in space, tended to generate categories with an opposite (negative) correlation. More generally, PACKER inherits the strengths and weaknesses of exemplar models of categorization: It provides a simple and flexible model that explains many results, but deviates systematically from human performance in some cases.
 
-Nonetheless, these classic effects are a core element of the phenomenology of creative generation, and PACKER does not include any mechanisms that explain them. Instead, through the development and evaluation of the PACKER model, we have sought to add new elements into such a phenomenology: The broad and strong influence of category contrast, and the interdependence between category location and distributional structure. It may be possible to combine the hierarchical Bayesian approach proposed by \cite{jern2013probabilistic} with PACKER's underlying claims to obtain a ``best of both worlds'' model, capable of explaining the role of contrast in creative generation, as well as the emulation of distributional structure. However, as noted in the introduction, the incorporation of category contrast is antithetical to the core principles of a traditional, semi-conjugate Bayesian approach. This suggests that category generation is a fundamentally different computational-level problem \citep[different from those posed by][]{jern2013probabilistic,kemp2014taxonomy}. 
+%Nonetheless, these classic effects are a core element of the phenomenology of creative generation, and PACKER does not include any mechanisms that explain them. Instead, through the development and evaluation of the PACKER model, we have sought to add new elements into such a phenomenology: The broad and strong influence of category contrast, and the interdependence between category location and distributional structure. It may be possible to combine the hierarchical Bayesian approach proposed by \cite{jern2013probabilistic} with PACKER's underlying claims to obtain a ``best of both worlds'' model, capable of explaining the role of contrast in creative generation, as well as the emulation of distributional structure. However, as noted in the introduction, the incorporation of category contrast is antithetical to the core principles of a traditional, semi-conjugate Bayesian approach. This suggests that category generation is a fundamentally different computational-level problem \citep[different from those posed by][]{jern2013probabilistic,kemp2014taxonomy}. 
 
 Characterizing that problem and conducting a rational analysis is an important direction for future research. To that aim, we plan to explore the connection between exemplar modeling as an Importance Sampling approximation \citep{shi10exemplar}, and see what sort of computational-level problem PACKER approximates. Once formalized in probabilistic terms, it should also be straightforward to incorporate distributional factors into the model. This would unite PACKER with the Bayesian representativeness model, and they would differ in terms of their assumptions about how people represent category distributions (as exemplars or prototypes, respectively). Alternatively, it may be possible to integrate the core principles of contrast into other categorization models \citep[e.g.,][]{love2004sustain,kurtz2007divergent,smith2000thirty}.
 
