Added representativeness to manuscript. Updated figures and results. Discussion in various places and some reviewer-related responses still need work.

--- a/Manuscripts/cog-psych/revision/citations.bib
+++ b/Manuscripts/cog-psych/revision/citations.bib
@@ -152,6 +152,17 @@
   publisher={American Psychological Association}
 }
 
+@article{goldstone1996isolated,
+  title={Isolated and interrelated concepts.},
+  author={Goldstone, Robert L},
+  journal={Memory \& Cognition},
+  volume={24},
+  number={5},
+  pages={608-628},
+  year={1996},
+  publisher={Psychonomic Society}
+}
+
 @article{goldstone2001altering,
   title={Altering object representations through category learning},
   author={Goldstone, Robert L and Lippa, Yvonne and Shiffrin, Richard M},
