major update. many things. to ken/xian

--- a/Manuscripts/cog-psych/revision/citations.bib
+++ b/Manuscripts/cog-psych/revision/citations.bib
@@ -342,6 +342,21 @@
   publisher={Elsevier}
 }
 
+@book{berger16,
+	author = {J. Berger},
+	title = {Contagious: Why Things Catch On},
+	publisher = {Simon and Schuster},
+	address = {New York: NY},
+	year = {2016}
+}
+
+@book{rogers03,
+	author = {E. M. Rogers},
+	title = {Diffusion of Innovations},
+	publisher = {Free Press},
+	address = {New York: NY},
+	year = {2003}
+}
 
 @book{kaufman2010handbook,
   title={The Cambridge handbook of creativity},
@@ -349,6 +364,23 @@
   publisher="Cambridge University Press",
   address="New York",
   year={2010},
+}
+
+@article{zwaan2017,
+author = {R. A. Zwaan and A. Etz and R. E. Lucas and M. B. Donnellan},
+title = {Making replication mainstream},
+journal = {Behavioral and Brain Sciences}
+pages = {1--50},
+year = {2017}
+}
+
+@article{stewart2005,
+	author = {N. Stewart and G. D. A. Brown},
+	title = {Similarity and dissimilarity as evidence in perceptual categorization},
+	journal = {Journal of Mathematical Psychology},
+	volume = {49},
+	year = {2005},
+	pages = {403--409}
 }
 
 @article{kemp2014taxonomy,
